# opc-dashboard

./: .gitignore  AGENT_API_SIGNED_TEST.md  AGENT_HELPER_SIGNED_TEST.md  AGENT_SMOKE_TEST.md  LICENSE  README.md
.githooks/: pre-commit
backend/: pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/api/: health.py  kg.py  search.py  stats.py
backend/app/db/: __init__.py  pool.py  schema_check.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_kg.py  test_schema_check.py  test_search.py
docker/: Dockerfile.backend  docker-compose.yml
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  app.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.test.ts  client.ts  runtime-client.ts  types.ts
frontend/src/components/: GraphCanvas.tsx  Header.tsx  HealthIndicator.test.tsx  HealthIndicator.tsx  PanelMessage.tsx
frontend/src/lib/: config.ts  errors.ts  format.ts  token-store.ts
frontend/src/pages/: KnowledgeGraphPage.test.tsx  KnowledgeGraphPage.tsx  SearchPage.test.tsx  SearchPage.tsx  StatsPage.test.tsx  StatsPage.tsx
frontend/src/test/: matchers.d.ts  setup.ts
